fixes: mobile nav overlapping footer

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -340,6 +340,21 @@ footer {
   text-align: center;
 }
 
+@media only screen and (max-width: 767px) {
+  footer {
+    bottom:75px
+  }
+
+  .doc-content {
+    margin-bottom: 75px;;
+  }
+
+  .homepage-sections {
+    margin-bottom: 50px;
+  }
+
+}
+
 #docs footer {
   grid-column-start: 1;
   grid-column-end: 3;
